2/23/12 replace getter with public final field
2/23/12 Concentration: verified that this sim is fully instrumented for data collection
2/23/12 Concentration: add non-interactive simsharing message for solution
2/23/12 Concentration: screenshot
2/23/12 reduce cuvette stroke width from 2 to 1.5 so it doesn't look so heavy
2/23/12 increase font size on ruler
2/23/12 Beers: increase vertical space for radio buttons in AT body (increase height of image files)
2/23/12 fix transparency at corners of meter body images
2/23/12 revised model.txt with JC's contributions
2/23/12 Beers: reset all solutions on Reset All
2/23/12 Concentration: fix for: make shaker empty, then drain out a little bit of solution, one grain of solute comes out of the shaker while activating the drain
2/23/12 Beers: setOpaque(false) for radio buttons
2/22/12 color center and right beam segments based on wavelength and %T, use gradient for beam segment in cuvette
2/22/12 show vertical diameter line in detector, for debugging
2/22/12 restore ability to move detector
# 0.00.12 (61619) Feb 22, 2012
2/22/12 dev version to verify absorbance (A) and transmittance (T) models
2/22/12 change molar absorptivity for Drink Mix, remove molar scaling factor from model
2/22/12 check in JC's latest spreadsheet
2/22/12 temporarily make detector position fixed
2/22/12 add alpha to left segment of beam
2/22/12 fix molar conversion factor for Drink Mix
2/22/12 make beam unpickable so that we can grab detector probe through beam
2/22/12 add molar conversion factor to model
2/22/12 revert %T model: %T = 100 * 10^(-A)
2/22/12 change %T model: %T = 100 * e^(-A)
2/22/12 fix snapping of cuvette width to nearest 0.1cm
2/22/12 change detector to 2 decimal places, to match data in spreadsheet
2/22/12 change to vertical layout of "Light View" radio buttons, so there's more room to move the detector probe between the light and cuvette
2/22/12 make AT detector show "-" when light is off
2/22/12 check in JC's latest spreadsheet