@@ -64,8 +64,8 @@ public class ShakerParticles {
             particle.stepInTime( deltaSeconds, beaker );
 
             // If the particle hits the solution surface or bottom of the beaker, delete it, and add a corresponding amount of solute to the solution.
-            double percentFull = solution.volume.get() / beaker.getVolume();
-            double solutionSurfaceY = beaker.getY() - ( percentFull * beaker.getHeight() ) - solution.solute.get().particleSize;
+            double percentFull = solution.volume.get() / beaker.volume;
+            double solutionSurfaceY = beaker.location.getY() - ( percentFull * beaker.size.getHeight() ) - solution.solute.get().particleSize;
             if ( particle.getLocation().getY() > solutionSurfaceY ) {
                 removeParticle( particle );
                 solution.soluteAmount.set( solution.soluteAmount.get() + ( 1d / solution.solute.get().particlesPerMole ) );
